force-app/main/default/objects/noduplicates__Merge_Rule__c/fields/noduplicates__Blank_Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Blank_Account_Strategy__c</fullName>
    <label>Blank Account Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skip</fullName>
                <default>true</default>
                <label>Skip</label>
            </value>
            <value>
                <fullName>Create New Account</fullName>
            </value>
            <value>
                <fullName>Use Existing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>