force-app/main/default/objects/noduplicates__Merge_Rule__c/fields/noduplicates__Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Existing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merge Rules</relationshipLabel>
    <relationshipName>Merge_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>