force-app/main/default/objects/noduplicates__Merge_Rule__c/fields/noduplicates__Master_Record_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Master_Record_Flow_API_Name__c</fullName>
    <label>Master Record Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>