force-app/main/default/objects/noduplicates__Merge_Rule__c/fields/noduplicates__Master_Values__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Master_Values__c</fullName>
    <label>Master Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>