force-app/main/default/objects/noduplicates__Merge_Rule__c/fields/noduplicates__Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Matching_Rule__c</fullName>
    <label>Matching Rule</label>
    <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
    <relationshipLabel>Merge Rules</relationshipLabel>
    <relationshipName>Merge_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>